@@ -1,3 +1,10 @@
+Mon Oct 24 2005  Johan Euphrosine  <johan@mekensleep.com>
+
+	* pokerclient2d/main.c: 
+	* pokerclient2d/network.c: 
+	added handling of GIOCondition G_IO_HUP: call gtk_main_quit
+	fix performance issue (CPU 100%), when interface server disconnect due to a crash
+
 Mon Oct 24 2005  Loic Dachary  <loic@gnu.org>
 
 	* Release 1.0.12
